--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     // google maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+
+    // permissions
+    implementation 'pub.devrel:easypermissions:3.0.0'
 }
 
 // Allow references to generated code
